# attendance-slack

./: .envrc  .gitignore  Dockerfile  Pipfile  README.md  docker-entrypoint.sh  envfile.sample  envfile_aws.sample  pyproject.toml  run.py  setup.cfg  slackbot_settings.py
.github/workflows/: pythonapp.yml
attendance_slack/: plugins.py  token_store_type.py
attendance_slack/akashi/: client.py  dakoku_type.py  exception.py  use_case.py  user_not_found_exception.py
attendance_slack/aws/: ssm_client.py
kubernetes/base/: deployment.yaml  kustomization.yaml  secret_sample.yaml
kubernetes/overlays/dev/: kustomization.yaml
