[metadata]
name = attendance_slack
version = v1.0.0
url = https://github.com/yamamo-i/attendance-slack
author = Yamamoto Iku
author_email = sw.spc2013@gmail.com
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/update_token.py
